--- a/slowxd.theme.css
+++ b/slowxd.theme.css
@@ -18,7 +18,7 @@
   --success-color: #40C98B;
   --danger-color: #982929;
   --url-color: var(--main-color);
-  --background-image: url('https://imgur.com/a/pJ0YreY');
+  --background-image: url('https://imgur.com/2PaemMq');
   --background-shading: 59%;
   --background-position: center;
   --background-size: cover;
